k8s/environments/production/app-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-s3-manager-service
  namespace: aws-s3-manager
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
